force-app/main/default/objects/Vechile__c/Vechile__c.object-meta.xml
<CustomObject>
    <description>Holds the information about the vehicle</description>
    <label>Vechile</label>
    <nameField>
        <label>Vechile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vechiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>