force-app/main/default/objects/Vechile__c/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <label>Color</label>
    <length>150</length>
    <type>Text</type>
</CustomField>