force-app/main/default/objects/Vechile__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>