force-app/main/default/objects/Vechile__c/fields/Next_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Service_Date__c</fullName>
    <formula>ADDMONTHS(Last_Service_Date__c,11)</formula>
    <label>Next Service Date</label>
    <type>Date</type>
</CustomField>